[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/images/special/token-damage.png" type="Texture" id=1]
[ext_resource path="res://assets/images/special/token-speed.png" type="Texture" id=2]
[ext_resource path="res://assets/images/special/token-radius.png" type="Texture" id=3]
[ext_resource path="res://assets/images/destroy-construction-v2.png" type="Texture" id=4]
[ext_resource path="res://scenes/UpgradingMenu.gd" type="Script" id=5]

[node name="UpgradingMenu" type="Node2D"]
script = ExtResource( 5 )

[node name="Background" type="ColorRect" parent="."]
margin_right = 400.0
margin_bottom = 180.0
color = Color( 0.262745, 0.164706, 0.164706, 0.65098 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageBooster" type="Node2D" parent="."]
position = Vector2( 70, 50 )

[node name="Label" type="Label" parent="DamageBooster"]
margin_left = -25.0
margin_top = 30.0
margin_right = 27.0
margin_bottom = 44.0
text = "Damage"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="DamageBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
texture_normal = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="ColorRect" parent="DamageBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RangeBooster" type="Node2D" parent="."]
position = Vector2( 200, 50 )

[node name="Label" type="Label" parent="RangeBooster"]
margin_left = -19.0
margin_top = 30.0
margin_right = 19.0
margin_bottom = 44.0
text = "Range"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="RangeBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="ColorRect" parent="RangeBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpeedBooster" type="Node2D" parent="."]
position = Vector2( 330, 50 )

[node name="Label" type="Label" parent="SpeedBooster"]
margin_left = -19.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 44.0
text = "Speed"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="TextureButton" parent="SpeedBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
texture_normal = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Filter" type="ColorRect" parent="SpeedBooster"]
margin_left = -25.0
margin_top = -25.0
margin_right = 25.0
margin_bottom = 50.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.368627 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DestroyButton" type="TextureButton" parent="."]
margin_left = 176.0
margin_top = 120.0
margin_right = 276.0
margin_bottom = 220.0
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="DamageBooster/Sprite" to="." method="_on_damage_booster_pressed"]
[connection signal="pressed" from="RangeBooster/Sprite" to="." method="_on_range_booster_pressed"]
[connection signal="pressed" from="SpeedBooster/Sprite" to="." method="_on_speed_booster_pressed"]
